--- a/zadanie_zaliczeniowe.html
+++ b/zadanie_zaliczeniowe.html
@@ -6,6 +6,10 @@
 	<link rel="stylesheet" href="styles.css">
     </head>
     <body>
+	<!-- strona jest robiona tylko na mojego lapka (zadnego RWD) -->
+	<!-- zalozenie html ma byc pusty oprocz div-u "out" -->
+	<!-- wszystko do html-a wstawiamy JS-em -->
+	<!-- dozwolone sa pliki dodatkowe typu *.css, *.svg -->
 	<div id="out"> </div>
 	<script type="text/javascript" src="./zadanie_zaliczeniowe.js"></script>
     </body>
