Ok, przejrzalem, dodalem komentarze, chyba powinno dzialac tak jak trzeba.

--- a/zadanie_zaliczeniowe.html
+++ b/zadanie_zaliczeniowe.html
@@ -10,6 +10,9 @@
 	<!-- zalozenie html ma byc pusty oprocz div-u "out" -->
 	<!-- wszystko do html-a wstawiamy JS-em -->
 	<!-- dozwolone sa pliki dodatkowe typu *.css, *.svg -->
+	
+	<!-- testowano na LinuxMint 19.1 Cinammon -->
+	<!-- przegladarki Firefox 71.0 i Chromium 79.0 -->
 	<div id="out"> </div>
 	<script type="text/javascript" src="./zadanie_zaliczeniowe.js"></script>
     </body>
